--- a/server/doc/minutes/2020-1-20.md
+++ b/server/doc/minutes/2020-1-20.md
@@ -7,6 +7,6 @@
 1. 前端后端商量接口，具体为数据分析模块和前端；
 2. 分工；
 3. 数据获取模块`search`函数改接口，具体为官方数据返回标题正文，民间数据返回标题评论`url`；人民日报的`keywords`形参弃之不用，但是仍然保留方便扩展（偷懒）；
-4. 存储使用`csv`文件，有三种类型，第一种为`normal`，即保存主题时间内容和`url`；第二种为`comments`，保存某一篇文章的评论；第三种为`nums`，存储编号方便构成唯一文件名，格式为$`weibo/bili/people/south`+`num`$；
+4. 存储使用`csv`文件，有三种类型，第一种为`normal`，即保存主题时间内容和`url`；第二种为`comments`，保存某一篇文章的评论；第三种为`nums`，存储编号方便构成唯一文件名，文件名格式为`weibo/bili/people/south`+`num`，以及`comments`+`num`；
 5. 数据获取模块对数据预处理模块的接口由`hwd`完成，数据预处理模块对数据分析模块的接口由`pyg`完成，数据分析模块对前端的接口由`hwd`完成，具体见各自文档；
 6. 我下次一定好好做会议记录，艹。
